fixed compile options

--- a/getval/makefile
+++ b/getval/makefile
@@ -1,10 +1,10 @@
-CC = clang
+CC = gcc
 CFLAGS = -Wall -std=c17 -O2 -fPIC
 prefix = /usr/local
 
 
 getval.out: getval.c
-	$(CC) $(CFLAGS) -lbesic $^ -o $@
+	$(CC) $(CFLAGS) $^ -static -lbesic -o $@
 
 install: getval.out
 	install -T getval.out $(DESTDIR)$(prefix)/bin/besic-getval
