switched to standard debian library format

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
 *.o
 *.out
 *.so
+*.so.*
 *.a
-*.swp
-*.tar.xz
-*.deb
-*.dsc
-*.build
-*.buildinfo
-*.changes
 *.substvars
 *.debhelper
 debhelper-build-stamp
 files
-/libbesic-dev/debian/libbesic-dev
+debian/libbesic*/*
+debian/tmp
