--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,7 @@
 	dh $@
 
 override_dh_auto_install:
-	$(MAKE) DESTDIR=$$(pwd)/debian/libbesic-dev prefix=/usr install
+	$(MAKE) DESTDIR=debian/tmp prefix=/usr install
 
 override_dh_auto_test:
 	$(MAKE) test.out
